# Photon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  pch.h  xmake.lua
.cache/clangd/index/: Control.cpp.1A84DA77CB318E19.idx  ControlBAse.cpp.2BC8880B02B9CB4A.idx  ControlBase.cpp.74A54498BC0912B4.idx  ControlBase.h.1BDCEBE2FD2F3D61.idx  HelloWindow.cpp.507C7641917F6883.idx  Window.cpp.E42A465CA2449445.idx  Window.h.3F903992DA93CB40.idx  interface.cpp.1294657899E9EC6B.idx  interface.h.88808B9C8AC8F615.idx  main.cpp.E6805D125EF21896.idx  pch.h.715DB6C07C162306.idx
Photon/: CMakeLists.txt  Photon.h  pch.h
Photon/core/: Action.cpp  Action.h  Context.h  ControlBAse.cpp  ControlBase.cpp  ControlBase.h  Data.cpp  Data.h  Event.cpp  Event.h  EventCenter.cpp  EventCenter.h  EventClient.cpp  EventClient.h  Listener.h  Msg.h  Require.hpp  RequireElement.h  RequireTree.cpp  RequireTree.h  Shader.hpp  Window.cpp  Window.h
Photon/extension/: ControlBase.h  EffectBase.h  Window.cpp  Window.h  WindowBase.h
Photon/implementation/opengl/: glShader.hpp  glWindow.cpp
Photon/lib/idgen/: IdGenOptions.c  IdGenOptions.h  IdGenerator.c  IdGenerator.h  SnowWorkerM1.c  SnowWorkerM1.h  SnowWorkerM2.c  SnowWorkerM2.h  common.h
Photon/lib/snowflake/: snowflake.hpp
Photon/opengl/: glControlBase.h  glWindow.h
VertexUI/core/: VertexUI.Control.h
core/: Action.h  DOMTree.cpp  DOMTree.h  DOMTree.hpp  Object.h  Observer.h  Signal.hpp
demo/: HelloWindow.cpp
